# dogit

./: .env.production  .eslintrc.cjs  .gitignore  README.md  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: analytics.ts  app.tsx  firebase.json  index.scss  main.tsx  windows.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: Info.plist  commands.rs  main.rs
src/api/: console.ts  execute.ts  git.ts  github.ts  gpg.ts  ssh.ts
src/components/blobs/: index.tsx  styles.module.scss
src/components/buttons/action/: index.tsx  styles.module.scss
src/components/buttons/default/: index.tsx  styles.module.scss
src/components/chip/: index.tsx  styles.module.scss
src/components/floating/bubble/: index.tsx  styles.module.scss
src/components/typography/: index.tsx  styles.module.scss
src/fonts/roboto/: font.scss
src/hooks/: navigation.ts  progress.ts  scrollbar.ts
src/hooks/tauri/: events.ts
src/i18n/: en.ts  ru.ts
src/managers/: autostart.tsx  deeplinks.tsx  focuser.tsx  no-context.tsx  notifications.tsx  resizer.tsx  syncronizer.tsx
src/notifications/action/: index.tsx  styles.module.scss
src/notifications/autoclosable/: index.tsx  styles.module.scss
src/notifications/base/: index.tsx  styles.module.scss
src/notifications/close/: index.tsx  styles.module.scss
src/notifications/error/: index.tsx
src/notifications/gpg/: add.tsx  copied.tsx  manage.tsx  remove.tsx
src/notifications/import/: index.tsx  styles.module.scss
src/notifications/info/: index.tsx
src/notifications/intro/: index.tsx
src/notifications/list/: index.tsx  styles.module.scss
src/notifications/manager/: card.tsx  index.tsx  styles.module.scss
src/notifications/manager/add/: index.tsx  styles.module.scss
src/notifications/manager/manage/: index.tsx
src/notifications/manager/profile/: base.tsx  github.tsx  gitlab.tsx  index.tsx  local.tsx  styles.module.scss
src/notifications/ssh/: add.tsx  copied.tsx  manage.tsx  remove.tsx
src/notifications/update/: index.tsx  styles.module.scss
src/notifications/updater/: index.tsx
src/store/: app.ts  persist.ts
